@@ -141,6 +141,9 @@ RELEASE 0.95 - XXX
     of whether the file was built via scons.bat or scons.py.
     (Thanks to Niall Douglas for contributing code and testing.)
 
+  - Fix TestCmd.py, runtest.py and specific tests to accomodate being
+    run from directories whose paths include white space.
+
   From Vincent Risi:
 
   - Add support for the bcc32, ilink32 and tlib Borland tools.
